layout issues

--- a/src/main/static/app.css
+++ b/src/main/static/app.css
@@ -24,7 +24,8 @@ h2 span {
 .jupiler {
     background: unset;
     height: 80px;
-    white-space: nowrap
+    white-space: nowrap;
+    overflow: hidden;
 }
 .jupiler > img {
     height: 100%;
